# blastbeat-detector

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: run-tests.yml
src/blastbeat_detector/: README.md  downloading.py  extraction.py  pipeline.py  plotting.py  postprocessing.py  processing.py
tests/: test_processing.py
