[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "blastbeat_detector"
version = "0.0.6"
authors = [
    { name = "@linomp" },
    { name = "@lmeullibre" },
    { name = "@m-poh" },
]
description = "Experimental package for identifying blast-beats in songs using spectral analysis"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Repository = "https://github.com/MutilatedPeripherals/blastbeat-detector"
